# pcba

./: .gitignore  Cargo.toml  README.md
grammar/: lisp.pest
pcbapy/: main.py  pyproject.toml
src/: cli.rs  main.rs  util.rs
src/commands/: new.rs
src/format/: kicad.rs  mod.rs
test_input/: cannify_micro.kicad_sch
