[package]
name = "pcba"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
anyhow = "1.0"
prompted = "0.2"
convert_case = "0.8"
pest = "2.8"
pest_derive = "2.8"
chardetng = "1.0"
encoding_rs = { version = "0.8", features = ["alloc"] }
lexpr = "0.2"